Feature/v0.2.5 capturing correct exception when game is finished

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,7 +8,7 @@
 <body>
 <h1>Welcome to Wordle</h1>
 <form id="wordleForm">
-    <input type="text" id="guessInput" maxlength="5" placeholder="Enter a 5-letter word">
+    <label for="guessInput"></label><input type="text" id="guessInput" maxlength="5" placeholder="Enter a 5-letter word">
     <button type="submit">Submit</button>
 </form>
 <p id="result"></p>
